commit translated contents

--- a/articles/api-management/index.yml
+++ b/articles/api-management/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: a1c16e8dd2a9b00e726dd527137bde4c059edae2
-  ms.sourcegitcommit: dabd9eb9925308d3c2404c3957e5c921408089da
+  ms.openlocfilehash: a714806724d900ff478209f3688ce27d0b20f261
+  ms.sourcegitcommit: 3fc3457b5a6d5773323237f6a06ccfb6955bfb2d
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/11/2020
-  ms.locfileid: "86243012"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90031460"
 landingContent:
 - title: 关于 API 管理
   linkLists:
@@ -29,6 +29,8 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
+    - text: Azure CLI
+      url: get-started-create-service-instance-cli.md
     - text: Azure 门户
       url: get-started-create-service-instance.md
     - text: Azure PowerShell
