--- a/articles/active-directory/hybrid/index.yml
+++ b/articles/active-directory/hybrid/index.yml
@@ -3,7 +3,7 @@ title: 混合标识文档
 summary: Microsoft 的标识解决方案跨越本地和基于云的功能，创建单一用户标识对所有资源进行身份验证和授权，而不考虑其位置。 我们称此为混合标识。
 metadata:
   author: billmath
-  description: Azure AD Connect 会将本地目录与 Azure Active Directory 集成。 这样，便可以为集成到 Azure AD 的 Office 365、Azure 和 SaaS 应用程序的用户提供一个通用标识。
+  description: Azure AD Connect 会将本地目录与 Azure Active Directory 集成。 这样，便可为集成到 Azure AD 的 Microsoft 365、Azure 和 SaaS 应用程序的用户提供一个通用标识。
   manager: daveba
   ms.author: billmath
   ms.collection: na
@@ -12,12 +12,12 @@ metadata:
   ms.subservice: na
   ms.topic: landing-page
   services: active-directory
-  ms.openlocfilehash: 5c2b9168ad2dcd25e0d99997f17a8ea4cc891eea
-  ms.sourcegitcommit: c94a177b11a850ab30f406edb233de6923ca742a
+  ms.openlocfilehash: b23c57561a866318a6dbf38dc2d669f0e9d13d32
+  ms.sourcegitcommit: f8d2ae6f91be1ab0bc91ee45c379811905185d07
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "89278507"
+  ms.lasthandoff: 09/10/2020
+  ms.locfileid: "89661124"
 landingContent:
 - title: 关于混合标识
   linkLists:
