--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -58,9 +58,11 @@
               href: set-up-mabs-for-avs.md
             - name: 使用备份服务器备份私有云 VM
               href: backup-avs-vms-with-mabs.md
+        - name: VM 的生命周期管理
+          href: lifecycle-management-of-azure-vmware-solution-vms.md
         - name: 应用程序网关
           href: protect-avs-web-apps-with-app-gateway.md
-        - name: AVS 的流量管理器
+        - name: 流量管理器
           href: deploy-traffic-manager-to-balance-avs-workloads.md
     - name: VMware 解决方案
       items:
