--- a/articles/iot-central/healthcare/toc.yml
+++ b/articles/iot-central/healthcare/toc.yml
@@ -20,7 +20,7 @@
   items:
     - name: 创建健康状况数据分类仪表板
       href: howto-health-data-triage.md
-    - name: 连接设备
+    - name: 连接和开发设备
       items:
         - name: 准备和连接 Rigado Cascade 500
           href: ../core/howto-connect-rigado-cascade-500.md?toc=/azure/iot-central/healthcare/toc.json&bc=/azure/iot-central/healthcare/breadcrumb/toc.json
