--- a/articles/iot-central/retail/index.yml
+++ b/articles/iot-central/retail/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: f37f876db15e2722907669cd1c1d8390f771034b
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: 8469f67967f311d4aca98417e8a5a639665b4641
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88080637"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90014916"
 landingContent:
 - title: 生成零售解决方案
   linkLists:
@@ -43,18 +43,32 @@ landingContent:
     links:
     - text: 连接 Rigado Cascade 500
       url: ../core/howto-connect-rigado-cascade-500.md
-- title: 建立连接
+- title: 连接和开发设备
   linkLists:
+  - linkListType: overview
+    links:
+    - text: 面向设备开发人员的概述
+      url: ../core/overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: 设置设备模板
-      url: ../core/howto-set-up-template.md
-    - text: 连接一个设备
-      url: ../core/tutorial-connect-device.md
+    - text: 连接设备 (Node.js)
+      url: ../core/tutorial-connect-device-nodejs.md
+    - text: 连接设备 (Python)
+      url: ../core/tutorial-connect-device-python.md
+  - linkListType: concept
+    links:
+    - text: 设备连接
+      url: ../core/concepts-get-connected.md
+    - text: 设备模板
+      url: ../core/concepts-device-templates.md
   - linkListType: how-to-guide
     links:
-    - text: 连接其他 IoT 云
-      url: ../core/howto-build-iotc-device-bridge.md
+    - text: 设置模板
+      url: ../core/howto-set-up-template.md
+    - text: 连接 Azure Sphere 设备
+      url: ../core/howto-connect-sphere.md
+    - text: 排查设备连接问题
+      url: ../core/troubleshoot-connection.md
 - title: 保持连接
   linkLists:
   - linkListType: tutorial
