--- a/articles/cognitive-services/Custom-Vision-Service/toc.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/toc.yml
@@ -39,6 +39,8 @@
       href: use-prediction-api.md
     - name: 使用智能标记工具
       href: suggested-tags.md
+    - name: 基于角色的访问控制
+      href: role-based-access-control.md
     - name: 导出模型
       items:
         - name: 将模型导出到移动设备
