--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -7,8 +7,10 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建 Front Door
+    - name: 创建 Front Door - 门户
       href: quickstart-create-front-door.md
+    - name: 创建 Front Door - ARM 模板
+      href: quickstart-create-front-door-template.md
 - name: 教程
   items:
     - name: 将自定义域添加到 Front Door
