--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -6,7 +6,7 @@
       href: overview-iot-central.md
     - name: UI 教程
       href: overview-iot-central-tour.md
-    - name: 开发设备
+    - name: 连接和开发设备
       href: overview-iot-central-developer.md
     - name: 最新更新
       items:
@@ -39,7 +39,7 @@
       href: quick-monitor-devices.md
 - name: 教程
   items:
-    - name: 建立连接
+    - name: 连接和开发设备
       items:
         - name: 连接设备 (Node.js)
           href: tutorial-connect-device-nodejs.md
@@ -75,7 +75,7 @@
       href: concepts-iot-edge.md
 - name: 操作指南
   items:
-    - name: 建立连接
+    - name: 连接和开发设备
       items:
         - name: 设置设备模板
           href: howto-set-up-template.md
