--- a/articles/iot-central/energy/index.yml
+++ b/articles/iot-central/energy/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 10/25/2019
-  ms.openlocfilehash: bc856e9a6a20c262f49cb4c2a730d8ba5157530a
-  ms.sourcegitcommit: 46f8457ccb224eb000799ec81ed5b3ea93a6f06f
+  ms.openlocfilehash: e0f15382d61558e72dd9c1e4ecf108bdf1655160
+  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "87337052"
+  ms.lasthandoff: 09/11/2020
+  ms.locfileid: "90017347"
 landingContent:
 - title: 生成能源解决方案
   linkLists:
@@ -31,18 +31,32 @@ landingContent:
       text: 创建智能计量监视应用
     - url: tutorial-solar-panel-app.md
       text: 创建太阳能板监视应用
-- title: 建立连接
+- title: 连接和开发设备
   linkLists:
+  - linkListType: overview
+    links:
+    - text: 面向设备开发人员的概述
+      url: ../core/overview-iot-central-developer.md
   - linkListType: tutorial
     links:
-    - text: 设置设备模板
-      url: ../core/howto-set-up-template.md
-    - text: 连接一个设备
-      url: ../core/tutorial-connect-device.md
+    - text: 连接设备 (Node.js)
+      url: ../core/tutorial-connect-device-nodejs.md
+    - text: 连接设备 (Python)
+      url: ../core/tutorial-connect-device-python.md
+  - linkListType: concept
+    links:
+    - text: 设备连接
+      url: ../core/concepts-get-connected.md
+    - text: 设备模板
+      url: ../core/concepts-device-templates.md
   - linkListType: how-to-guide
     links:
-    - text: 连接其他 IoT 云
-      url: ../core/howto-build-iotc-device-bridge.md
+    - text: 设置模板
+      url: ../core/howto-set-up-template.md
+    - text: 连接 Azure Sphere 设备
+      url: ../core/howto-connect-sphere.md
+    - text: 排查设备连接问题
+      url: ../core/troubleshoot-connection.md
 - title: 保持连接
   linkLists:
   - linkListType: tutorial
