--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -11,51 +11,53 @@ metadata:
   ms.collection: collection
   author: j-martens
   ms.author: jmartens
-  ms.date: 08/17/2020
+  ms.date: 09/17/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: 63e1e9216a5150b957a34e15def9726167694978
-  ms.sourcegitcommit: ef055468d1cb0de4433e1403d6617fede7f5d00e
+  ms.openlocfilehash: 19aba3cd915ac980f2f21e2457365fb6768d10c2
+  ms.sourcegitcommit: 5d7f8c57eaae91f7d9cf1f4da059006521ed4f9f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/16/2020
-  ms.locfileid: "88258705"
+  ms.lasthandoff: 09/10/2020
+  ms.locfileid: "89668804"
 landingContent:
-- title: 机器学习入门
+- title: 入门：代码优先
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 使用 Python 笔记本
+    - text: 入门 (Python)
       url: tutorial-1st-experiment-sdk-setup.md
-    - text: 使用 AutoML（无代码/低代码）
-      url: tutorial-first-experiment-automated-ml.md
-    - text: 在设计器中（拖放式）
-      url: tutorial-designer-automobile-price-train-score.md
-    - text: 使用 RStudio
+    - text: 使用 ML 管道的批量推理 (Python)
+      url: tutorial-pipeline-batch-scoring-classification.md
+    - text: 入门 (R)
       url: tutorial-1st-r-experiment.md
+- title: 入门：低代码或无代码
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: Azure 机器学习工作室
+      url: overview-what-is-machine-learning-studio.md
+    - text: 什么是自动化 ML (AutoML)？
+      url: concept-automated-ml.md
+    - text: 什么是拖放式设计器？
+      url: concept-designer.md
+  - linkListType: tutorial
+    links:
+    - text: AutoML 入门
+      url: tutorial-first-experiment-automated-ml.md
+    - text: 在设计器中开始使用
+      url: tutorial-designer-automobile-price-train-score.md
+  - linkListType: reference
+    links:
+    - text: 设计器算法和模块
+      url: algorithm-module-reference/module-reference.md
 - title: 将 ML 模型引入 Azure
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 将本地模型部署到云
+    - text: 将模型部署到云
       url: how-to-deploy-existing-model.md
-- title: 在工作室中使用 AutoML 或拖动
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: 什么是自动化机器学习 (AutoML)？
-      url: concept-automated-ml.md
-    - text: 什么是设计器（拖放式）？
-      url: concept-designer.md
-    - text: 如何选择算法
-      url: how-to-select-algorithms.md
-  - linkListType: tutorial
-    links:
-    - text: AutoML：构建分类模型
-      url: tutorial-first-experiment-automated-ml.md
-    - text: 设计器：预测汽车价格
-      url: tutorial-designer-automobile-price-train-score.md
-    - text: 标记图像进行分类
-      url: tutorial-labeling.md
+    - text: 跟踪和部署 MLflow 模型
+      url: how-to-use-mlflow.md
 - title: MLOps：部署和管理模型
   linkLists:
   - linkListType: how-to-guide
@@ -64,51 +66,11 @@ landingContent:
       url: concept-model-management-and-deployment.md
     - text: 部署方式和位置
       url: how-to-deploy-and-where.md
-    - text: 实时预测
-      url: how-to-consume-web-service.md
-    - text: 成批预测
-      url: how-to-use-parallel-run-step.md
-    - text: MLOps 示例存储库
-      url: https://github.com/microsoft/MLOps
-- title: 使用 Python SDK 进行训练
-  linkLists:
-  - linkListType: tutorial
-    links:
-    - text: 创建第一个 ML 试验
-      url: tutorial-1st-experiment-sdk-setup.md
-    - text: 使用 AutoML 预测出租车费用
-      url: tutorial-auto-train-models.md
-    - text: 创建 Azure ML 管道
-      url: tutorial-pipeline-batch-scoring-classification.md
-    - text: 对图像进行分类
-      url: tutorial-train-models-with-aml.md
-  - linkListType: how-to-guide
-    links:
-    - text: 设置你的环境
-      url: how-to-configure-environment.md
-    - text: 训练 Scikit-learn 模型
-      url: how-to-train-scikit-learn.md
-    - text: 训练 TensorFlow 模型
-      url: how-to-train-tensorflow.md
-    - text: 训练 PyTorch 模型
-      url: how-to-train-pytorch.md
-    - text: 训练 Keras 模型
-      url: how-to-train-keras.md
-    - text: 什么是 ML 管道？
-      url: concept-ml-pipelines.md
-- title: 转到参考文档
-  linkLists:
   - linkListType: reference
     links:
-    - text: 用于 Python 的 SDK
+    - text: Python SDK
       url: https://docs.microsoft.com/python/api/overview/azure/ml/?view=azure-ml-py
-    - text: 设计器算法和模块
-      url: algorithm-module-reference/module-reference.md
     - text: REST API
       url: https://docs.microsoft.com/rest/api/azureml/
     - text: 机器学习 CLI
       url: https://docs.microsoft.com/cli/azure/ext/azure-cli-ml/ml?view=azure-cli-latest
-    - text: AI 参考体系结构 (GitHub)
-      url: https://github.com/Microsoft/AI
-    - text: 用于 R 的 SDK
-      url: https://azure.github.io/azureml-sdk-for-r/reference/index.html
