--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -166,9 +166,21 @@
               href: how-to-use-azure-ad-identity.md
         - name: 网络安全
           items:
-            - name: 使用虚拟网络
+            - name: 虚拟网络概述
               displayName: 'vnet, blob'
-              href: how-to-enable-virtual-network.md
+              href: how-to-network-security-overview.md
+            - name: 保护工作区资源
+              displayName: 'vnet, workspace, container instance, container registry'
+              href: how-to-secure-workspace-vnet.md
+            - name: 保护训练环境
+              displayName: vnet
+              href: how-to-secure-training-vnet.md
+            - name: 保护推理环境
+              displayName: vnet
+              href: how-to-secure-inferencing-vnet.md
+            - name: 在虚拟网络中使用工作室
+              displayName: vnet
+              href: how-to-enable-studio-virtual-network.md
             - name: 使用专用链接
               displayName: private endpoint
               href: how-to-configure-private-link.md
@@ -307,6 +319,9 @@
             - name: 优化超参数
               displayName: parameter
               href: how-to-tune-hyperparameters.md
+        - name: 使用 MLflow
+          displayName: 'log, monitor, deploy, metrics, Databricks, model registry, register'
+          href: how-to-use-mlflow.md
         - name: Scikit-learn
           href: how-to-train-scikit-learn.md
         - name: TensorFlow
@@ -328,9 +343,6 @@
             - name: 查看日志
               displayName: 'troubleshoot, log, files, tracing'
               href: how-to-monitor-view-training-logs.md
-            - name: 使用 MLflow 对试验进行跟踪
-              displayName: 'log, monitor, metrics, Databricks'
-              href: how-to-use-mlflow.md
             - name: 使用 TensorBoard 将运行可视化
               displayName: 'log, monitor, metrics'
               href: how-to-monitor-tensorboard.md
