--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -50,17 +50,17 @@
               href: connect-azure-ad-identity-protection.md
             - name: Azure 信息保护
               href: connect-azure-information-protection.md
-            - name: Microsoft Defender ATP
+            - name: 用于终结点的 Microsoft Defender
               href: connect-microsoft-defender-advanced-threat-protection.md
-            - name: Azure ATP
+            - name: 用于标识的 Microsoft Defender（以前称为 Azure ATP）
               href: connect-azure-atp.md
             - name: Azure DDoS 防护
               href: connect-azure-ddos-protection.md
             - name: Azure 防火墙
               href: connect-azure-firewall.md
-            - name: Azure 安全中心
+            - name: ASC 中的 Azure Defender 警报
               href: connect-azure-security-center.md
-            - name: 适用于 IoT 的 Azure 安全中心
+            - name: 用于 IoT 的 Azure Defender（以前称为 ASC）
               href: connect-asc-iot.md
             - name: Azure Web 应用程序防火墙 (WAF)
               href: connect-azure-waf.md
@@ -114,6 +114,8 @@
               href: connect-vmware-carbon-black.md
             - name: Zimperium Mobile Threat Defense
               href: connect-zimperium-mtd.md
+            - name: 使用 Logstash 进行连接
+              href: connect-logstash.md
             - name: 基于 CEF 的解决方案
               href: connect-common-event-format.md
               items:
