--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -4,7 +4,7 @@
   href: ./sql-data-warehouse/sql-data-warehouse-overview-what-is.md
 - name: 概述
   items:
-    - name: 什么是 Azure Synapse Analytics？
+    - name: 什么是 Azure Synapse？
       href: overview-what-is.md
     - name: 入门
       items:
@@ -36,10 +36,10 @@
   items:
     - name: 使用 Azure 门户创建 Synapse 工作区
       href: quickstart-create-workspace.md
-    - name: 使用模板进行部署
-      href: quickstart-deployment-template-workspaces.md
     - name: 使用 Azure CLI 创建 Synapse 工作区
       href: quickstart-create-workspace-cli.md
+    - name: 使用模板进行部署
+      href: quickstart-deployment-template-workspaces.md
     - name: 使用 Synapse Studio
       href: quickstart-synapse-studio.md
     - name: 链接 Power BI 工作区
@@ -70,7 +70,7 @@
       href: quickstart-connect-synapse-link-cosmos-db.md
 - name: 教程
   items:
-    - name: 运行适用于 Spark 池的 Apache Spark 应用程序
+    - name: 运行 Apache Spark 应用程序
       href: ./spark/intellij-tool-synapse.md
     - name: Spark 作业定义
       href: ./spark/apache-spark-job-definitions.md
@@ -84,7 +84,7 @@
           href: ./spark/apache-spark-machine-learning-mllib-notebook.md
     - name: 数据分析师
       items:
-        - name: 使用 SQL 按需版本进行分析并使用 Synapse Studio 进行可视化
+        - name: 使用按需 SQL 分析数据
           href: ./sql/tutorial-data-analyst.md
 - name: 示例
   href: 'https://github.com/Azure-Samples/Synapse'
@@ -258,7 +258,7 @@
           items:
             - name: 概述
               href: ./sql-data-warehouse/design-elt-data-loading.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-            - name: 最佳实践
+            - name: 最佳做法
               href: sql/data-loading-best-practices.md
             - name: 列存储压缩
               href: sql/data-load-columnstore-compression.md
@@ -372,9 +372,9 @@
           href: ../cosmos-db/synapse-link-use-cases.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
     - name: 工具集成（AI、ETL、BI）
       items:
-        - name: 排查 Synapse Analytics Studio 的问题
+        - name: 排查 Synapse Studio 的问题
           href: troubleshoot/troubleshoot-synapse-studio.md
-        - name: 使用 PowerShell 排查 Synapse Analytics Studio 的问题
+        - name: 排查 Synapse Studio 连接问题
           href: troubleshoot/troubleshoot-synapse-studio-powershell.md
 - name: 如何
   items:
@@ -422,7 +422,7 @@
                   href: ./sql-data-warehouse/sql-data-warehouse-how-to-manage-and-monitor-workload-importance.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: 升级到第 2 代
               href: ./sql-data-warehouse/upgrade-to-latest-generation.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-    - name: 数据引入和准备
+    - name: 引入和准备数据
       items:
         - name: 到数据仓库中
           items:
@@ -869,7 +869,7 @@
               href: ../data-factory/copy-data-tool-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: 自承载集成运行时故障排除
               href: ../data-factory/self-hosted-integration-runtime-troubleshoot-guide.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-    - name: 将工具连接到 Synapse Analytics
+    - name: 将工具连接到 Synapse 工作区
       items:
         - name: Synapse SQL
           items:
