--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -172,6 +172,8 @@
           href: vpn-gateway-howto-always-on-user-tunnel.md
         - name: 向 P2S 客户端播发自定义路由
           href: vpn-gateway-p2s-advertise-custom-routes.md
+        - name: 为 P2S 创建自定义 IPsec 策略
+          href: create-custom-policies-p2s-ps.md
     - name: 路由、BGP 和 VNet 对等互连
       items:
         - name: 为 VPN 网关配置 BGP
